--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,52 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.versions = [
+            build_tools_version: '29.0.2',
+            dagger             : '2.24',
+            navigation         : '2.1.0-rc01',
+            kotlin             : '1.1.0',
+            lifecycle          : '1.1.1',
+            single_live_event  : '1.0.1',
+            compat             : '1.1.0-rc01',
+            constraint         : '1.1.3',
+            coroutines_core    : '1.3.50',
+            coroutines_android : '1.3.1',
+            okHttp             : '4.2.0',
+            retrofit           : '2.6.1',
+            converter_scalars  : '2.5.0',
+            gson               : '2.8.5',
+            glide              : '4.10.0',
+            glide_processor    : '4.8.0',
+            card_view          : '1.0.0',
+            recycler_view      : '1.1.0',
+            fragment_ktx       : '1.2.0-rc03',
+            constraint_layout  : '1.1.3',
+            room               : "2.2.3",
+            media              : "1.1.0",
+            exoplayer_http     : "r2.4.0",
+            exoplayer          : "2.10.5",
+            pageindicatorview  : "1.0.3",
+            easypermissions    : "3.0.0",
+            junit              : "1.1.1",
+            mockito            : "2.25.0",
+            mockitoKotlin      : "2.2.0",
+            archCoreTesting    : "1.1.1",
+            robolectric        : "4.3.1",
+            cicerone           : '5.0.0',
+            javaxInject        : "1",
+            material           : "1.0.0",
+            bottomNavigation   : "2.3.4",
+            adapterDelegates   : '4.0.0',
+            annotation         : '1.1.0'
+    ]
+
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
