--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //coroutines
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.coroutines_core}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines_android}"
 }
