--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ dependencies {
     implementation project(":core-start-impl")
     implementation project(":core-start-api")
     implementation project(":feature-start")
+    implementation project(":core-categories-impl")
+    implementation project(":core-categories-api")
+    implementation project(":feature-categories")
+    implementation project(":common-api")
+    implementation project(":navigation-api")
+    implementation project(":navigation-impl")
 
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
