--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -31,12 +31,11 @@ android {
 
 dependencies {
 
+    implementation project(":common-api")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "androidx.recyclerview:recyclerview:${versions.recycler_view}"
     implementation "com.hannesdorfmann:adapterdelegates4:${versions.adapterDelegates}"
