--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -27,11 +27,16 @@ android {
         }
     }
 
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
 
     implementation project(":common-api")
+    implementation project(":tools")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
